# ec_cost_slack_bot

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: main.rs
